@@ -1,7 +1,8 @@
 Revision history for Fork-Event-Interval
 
 0.05 UNREL
-        -
+        - POD fix (indenting examples)
+        - bump copyright to 2017
 
 0.04    2017-10-19
         - added examples/shared.pl, shared variable between all events and
